Ensure compatibility with jre 8